[gd_scene load_steps=7 format=2]

[ext_resource path="res://OpenWorld/Player/Dialog/DialogBox.png" type="Texture" id=1]
[ext_resource path="res://OpenWorld/Player/Dialog/blankbutton.png" type="Texture" id=2]
[ext_resource path="res://OpenWorld/Player/Dialog/Dialog.gd" type="Script" id=3]
[ext_resource path="res://pkmnfl.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=40]
extra_spacing_top = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=41]
extra_spacing_top = 8
font_data = ExtResource( 4 )

[node name="DialogBox" type="ColorRect"]
visible = false
margin_left = -139.5
margin_top = 28.0
margin_right = 137.5
margin_bottom = 106.0
mouse_filter = 2
color = Color( 0.933333, 0.933333, 0.933333, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="Sprite" parent="."]
position = Vector2( 30.75, -18 )

[node name="DialogBox3" type="TextureRect" parent="."]
margin_right = 277.0
margin_bottom = 78.0
mouse_filter = 2
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="RichTextLabel" parent="."]
anchor_top = 0.205
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = -0.99
margin_right = -13.0
margin_bottom = -23.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/normal_font = SubResource( 40 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.205
margin_left = 16.0
margin_top = -20.0
margin_right = 12.0
margin_bottom = -7.99
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/normal_font = SubResource( 40 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="TextureButton" parent="Choices"]
anchor_right = 0.978
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 12.0
margin_right = -178.906
margin_bottom = -52.0
texture_normal = ExtResource( 2 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceText" type="RichTextLabel" parent="Choices/Choice1"]
margin_right = 68.0
margin_bottom = 28.0
mouse_filter = 2
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/normal_font = SubResource( 41 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice2" type="TextureButton" parent="Choices"]
anchor_left = 0.03
anchor_right = 0.978
anchor_bottom = 1.0
margin_left = 169.19
margin_top = 12.0
margin_right = -22.406
margin_bottom = -52.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceText" type="RichTextLabel" parent="Choices/Choice2"]
margin_left = 0.5
margin_right = 70.5
margin_bottom = 28.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/normal_font = SubResource( 41 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice3" type="TextureButton" parent="Choices"]
anchor_right = 0.978
anchor_bottom = 1.0
margin_left = 97.5
margin_top = 12.0
margin_right = -99.406
margin_bottom = -52.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceText" type="RichTextLabel" parent="Choices/Choice3"]
margin_right = 77.0
margin_bottom = 28.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/normal_font = SubResource( 41 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice4" type="TextureButton" parent="Choices"]
anchor_right = 0.978
anchor_bottom = 1.0
margin_left = 24.5
margin_top = 35.0
margin_right = -178.406
margin_bottom = -30.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceText" type="RichTextLabel" parent="Choices/Choice4"]
margin_left = 0.499992
margin_top = -0.5
margin_right = 68.5
margin_bottom = 24.5
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/normal_font = SubResource( 41 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice6" type="TextureButton" parent="Choices"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 97.5
margin_top = 35.0
margin_right = -105.5
margin_bottom = -30.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceText" type="RichTextLabel" parent="Choices/Choice6"]
margin_right = 77.0
margin_bottom = 25.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/normal_font = SubResource( 41 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice5" type="TextureButton" parent="Choices"]
anchor_right = 0.978
anchor_bottom = 0.883
margin_left = 177.0
margin_top = 34.5
margin_right = -22.906
margin_bottom = -21.374
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceText" type="RichTextLabel" parent="Choices/Choice5"]
margin_left = 0.500011
margin_top = -0.5
margin_right = 70.5
margin_bottom = 24.5
mouse_filter = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0 )
custom_fonts/normal_font = SubResource( 41 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 1.52588e-05, -3.8147e-06 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Polygon2D"]

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Choices/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="pressed" from="Choices/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="Choices/Choice3" to="." method="_on_Choice3_pressed"]
[connection signal="pressed" from="Choices/Choice4" to="." method="_on_Choice4_pressed"]
[connection signal="pressed" from="Choices/Choice6" to="." method="_on_Choice6_pressed"]
[connection signal="pressed" from="Choices/Choice5" to="." method="_on_Choice5_pressed"]
